-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
6.2.0 Alpha
-
None
-
OpenSUSE Tumbleweed, X11, KDE Plasma
-
-
0e67fb41cfc4b4bfbaa7dc75f8ddebdf5a08e836 (qt/qtx11extras/dev)
On current Qt6 dev + QtX11Extras dev there is a crash when calling QX11Info::isCompositingManagerRunning()
#0 findScreenForVirtualDesktop (virtualDesktopNumber=0) at src/x11extras/qx11info_x11.cpp:66 #1 0x00007ffff56f3e90 in QX11Info::isCompositingManagerRunning (screen=0) at src/x11extras/qx11info_x11.cpp:396 #2 0x00007ffff26ab1c5 in Breeze::Helper::compositingActive (this=0x5d4b20) at ../kstyle/breezehelper.cpp:1604 #3 0x00007ffff26ab1ec in Breeze::Helper::hasAlphaChannel (this=0x5d4b20, widget=0x7e1bc0) at ../kstyle/breezehelper.cpp:1614 #4 0x00007ffff26bd9a6 in Breeze::Style::polish (this=0x5d0660, widget=0x7e1bc0) at ../kstyle/breezestyle.cpp:365 #5 0x00007ffff7381bee in QWidget::event (this=0x7e1bc0, event=0x7fffffffc3a0) at qtbase/src/widgets/kernel/qwidget.cpp:8740 #6 0x00007ffff732eb12 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7e1bc0, e=0x7fffffffc4d0) at qtbase/src/widgets/kernel/qapplication.cpp:3401 #7 0x00007ffff60f6bea in QCoreApplication::notifyInternal2 (receiver=0x7e1bc0, event=0x7fffffffc4d0) at qtbase/src/corelib/kernel/qcoreapplication.cpp:1039 #8 0x00007ffff737d96b in QWidget::ensurePolished (this=0x7e1bc0) at qtbase/src/widgets/kernel/qwidget.cpp:9888 #9 0x00007ffff737d9b3 in QWidget::ensurePolished (this=0x7cb9e0) at qtbase/src/widgets/kernel/qwidget.cpp:9897 #10 0x00007ffff737d9b3 in QWidget::ensurePolished (this=0x861100) at qtbase/src/widgets/kernel/qwidget.cpp:9897 #11 0x00007ffff737d9b3 in QWidget::ensurePolished (this=0x5ef250) at qtbase/src/widgets/kernel/qwidget.cpp:9897 #12 0x00007ffff737d9b3 in QWidget::ensurePolished (this=this@entry=0x60de10) at qtbase/src/widgets/kernel/qwidget.cpp:9897 #13 0x00007ffff7380d1d in QWidgetPrivate::setVisible (this=0x5ef480, visible=<optimized out>) at qtbase/src/widgets/kernel/qwidget.cpp:8059 #14 0x000000000042f00a in main (argc=1, argv=0x7fffffffd378) at ../kcalc.cpp:2437
In https://code.qt.io/cgit/qt/qtx11extras.git/tree/src/x11extras/qx11info_x11.cpp#n65 qxcbScreen is null so it appears that the dynamic_cast is failing.
| For Gerrit Dashboard: QTBUG-91913 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 339433,5 | Fix crash due to bad cast to QXcbScreen | dev | qt/qtx11extras | Status: MERGED | +2 | 0 |