Fix crash due to bad cast to QXcbScreen

Fixes: QTBUG-91913
Change-Id: I498b8a18b7f47f94fd610f13797473951ea98f85
Reviewed-by: Liang Qi <liang.qi@qt.io>